[package]
name = "ossler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = "*"
rust-htslib = "*"
ndarray = "*"
itertools = "*"
csv = "*"
anyhow = "*"
serde = { version = "1", features = ["derive"] }